--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.4.23",
+        "sass": "^1.62.1",
         "tailwindcss": "^3.3.2",
         "vite": "^4.0.0"
     }
