--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "devDependencies": {
         "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
+        "flowbite": "^1.6.5",
         "laravel-datatables-vite": "^0.5.2",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
